# task-app

./: README.md  docker-compose.yml  makefile
client/: .env  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/prisma/: schema.prisma
client/src/app/: layout.tsx  page.tsx
client/src/app/task/: page.tsx  task.tsx
client/src/app/workspace/: header.tsx  layout.tsx  page.tsx
client/src/app/workspace/task/: page.tsx  skelton.tsx  task.json  task.tsx  taskInput.tsx
client/src/app/workspace/task/[taskId]/: page.tsx
client/src/lib/next/: next-auth.d.ts
client/src/pages/api/auth/: [...nextauth].ts
client/src/pages/api/task/: index.ts
client/src/pages/api/task/[taskId]/: index.ts
client/src/types/: next-auth.d.ts
db/: Dockerfile  my.conf
server/: Dockerfile  pyproject.toml
server/api/: db.py  main.py  migrate.py
server/api/cruds/: task.py  user.py
server/api/models/: task.py  user.py
server/api/routers/: task.py  user.py
server/api/schemas/: task.py  user.py
